fixing index link for univariate LDA

--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,7 @@ output:
 
 ## Linear Discriminant Analysis
 
-- BLAH
+- [Univariate LDA - Binary Outcome](univariate_LDA.html)
 
 ## Logistic Regression
 
