--- a/index.Rmd
+++ b/index.Rmd
@@ -7,9 +7,16 @@ output:
     pandoc_args: "--webtex"
 ---
 
+Below is a list of working examples of common statistical learning models, built as I make my way through Hastie, Tibshirani, and Friedman's [Elements of Statistical Learning](https://web.stanford.edu/~hastie/ElemStatLearn/){target="_blank"} and Hastie, Tibshirani, James, and Witten's [Introduction to Statistical Learning With Applications in R](https://www.statlearning.com/){target="_blank"}.
+
+All code is written simply for fun in my free time while going through the above texts and are meant only for educational/fun purposes. In most cases the processes/algorithms used are not the most stable or efficient in finite precision.
+
+Please [open an issue](https://github.com/my-cabbages/ESL_ISLR/issues){target="_blank"} if you notice any errors!
+
 ## Linear Discriminant Analysis
 
 - [Univariate LDA - Binary Outcome](univariate_LDA.html)
+- [Multivariate LDA - Three-Class Outcome](multivariate_LDA.html)
 
 ## Logistic Regression
 
